--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Bump version and push tag
         uses: jaumann/github-bumpversion-action@v0.0.7
         env:
-          GITHUB_TOKEN: ${{ secrets.AUTO_MERGE_AND_BUMP }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.AUTO_MERGE_AND_BUMP }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
 
       # Runs a single command using the runners shell
