--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -35,6 +35,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
+          
+      - name: print base branch
+        run: echo "Pull request's base branch is: ${BASE_BRANCH}"
 
       # Runs a single command using the runners shell
       #- name: Run a one-line script
