--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -41,7 +41,7 @@ jobs:
           echo "Pull request's base branch is: ${BASE_BRANCH}"
         env:
           BASE_BRANCH: ${{ github.base_ref }}
-        if: github.event_name == 'pull_request'
+        #if: github.event_name == 'pull_request'
 
 
       # Runs a single command using the runners shell
