--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -38,8 +38,12 @@ jobs:
           
       - name: print base branch
         run: |
-          echo "${{ github.event.commits[0].message }}"
+          echo $COMMIT_MESSAGE; echo $MERGE
         #if: github.event_name == 'pull_request'
+        env:
+          MERGE_MESSAGE: "Merge pull request "
+          COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
+          MERGE: $(( if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then;  echo "It's there!"; fi ))
 
 
       # Runs a single command using the runners shell
