--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -40,8 +40,8 @@ jobs:
         env:
           MERGE_MESSAGE: "Merge pull request "
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
-          MERGE: ${{ $( if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi ) }}
-        if: $MERGE == 1
+          MERGE: $( if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi )
+        if: ${{ !env.MERGE }} == 1
         run: |
           echo $COMMIT_MESSAGE; echo $MERGE
 
