--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -41,9 +41,10 @@ jobs:
           MERGE_MESSAGE: "Merge pull request "
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
           MERGE: $( if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi )
-        if: ${{ !env.MERGE }} == 1
+          FIX: $( if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi )
+        if: ${{ !env.MERGE }} == 1 && ${{ !env.FIX }} 
         run: |
-          echo $COMMIT_MESSAGE; echo $MERGE
+          echo "it's a hotfix"
 
 
       # Runs a single command using the runners shell
