--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -40,8 +40,8 @@ jobs:
         env:
           MERGE_MESSAGE: "Merge pull request "
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
-          MERGE: if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi
-          FIX: if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi
+          MERGE: ${{ if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi }}
+          FIX: ${{ if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi }}
         if: ${{ !env.MERGE }} == 1 && ${{ !env.FIX }} == 1
         run: |
           echo "it's a hotfix"; echo $MERGE; echo $FIX
