--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -42,7 +42,9 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
           MERGE: ${{ $( if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi ) }}
           FIX: ${{ $( if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi ) }}
-        if: ${{ !env.MERGE }} == 1 && ${{ !env.FIX }} == 1
+        if: ${{ !env.COMMIT_MESSAGE }} ==  *${{ !env.MERGE_MESSAGE }}* && ( 
+            ${{ !env.COMMIT_MESSAGE }} ==  *"fix/"* || 
+            ${{ !env.COMMIT_MESSAGE }} ==  *"hotfix/"* )
         run: |
           echo "it's a hotfix"; echo $MERGE; echo $FIX
 
