--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -40,8 +40,8 @@ jobs:
         env:
           MERGE_MESSAGE: "Merge pull request "
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
-          MERGE: ${{ if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi }}
-          FIX: ${{ if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi }}
+          MERGE: if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi 
+          FIX: if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi 
         if: ${{ !env.COMMIT_MESSAGE }} ==  *${{ !env.MERGE_MESSAGE }}* && ( 
             ${{ !env.COMMIT_MESSAGE }} ==  *"fix/"* || 
             ${{ !env.COMMIT_MESSAGE }} ==  *"hotfix/"* )
