--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -42,7 +42,7 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
           MERGE: if [[ $COMMIT_MESSAGE == *$MERGE_MESSAGE* ]]; then echo 1; fi 
           FIX: if [[ $COMMIT_MESSAGE == *"hotfix/"* || $COMMIT_MESSAGE == *"fix"* ]]; then echo 1; fi 
-        if: env.COMMIT_MESSAGE == env.MERGE_MESSAGE && ( env.COMMIT_MESSAGE ==  *"fix/"* || env.COMMIT_MESSAGE ==  *"hotfix/"* )
+        if: env.COMMIT_MESSAGE == env.MERGE_MESSAGE && ( "fix/" in env.COMMIT_MESSAGE || "hotfix/" in env.COMMIT_MESSAGE )
         run: |
           echo "it's a hotfix"; echo $MERGE; echo $FIX
 
