--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -38,9 +38,9 @@ jobs:
           
       - name: print base branch
         env:
-          MERGE_MESSAGE: "Merge pull request "
+          MERGE_MESSAGE: 'Merge pull request '
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
-        if: contains('github is truly idiotic', 'idiot')
+        if: contains(${{ !env.COMMIT_MESSAGE }}', 'idiot')
         #if: contains(env.COMMIT_MESSAGE, env.MERGE_MESSAGE) && contains(env.COMMIT_MESSAGE, 'fix/')
         run: |
           echo "it's a hotfix"; echo $MERGE; echo $FIX
