--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -37,7 +37,7 @@ jobs:
       #    tags: true
           
       - name: print base branch
-        if: contains(github.event.commits[0].message, 'Merge pull request ') && contains(github.event.commits[0].message, 'fix/')
+        if: contains(github.event.commits[0].message, 'Merge pull request ') #&& contains(github.event.commits[0].message, 'fix/')
         run: |
           echo "it's a hotfix"; echo $MERGE; echo $FIX
 
