--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -37,9 +37,9 @@ jobs:
       #    tags: true
           
       - name: print base branch
-        #if: ${{ contains(github.event.commits[0].message, 'Merge') }} #&& contains(github.event.commits[0].message, 'fix/')
+        #if: ${{ contains(github.event.head_commit.message, 'Merge') }} #&& contains(github.event.commits[0].message, 'fix/')
         run: |
-          echo "${{ github.event.commits[1].message }}"
+          echo "${{ github.event.head_commit.message }}"
 
 
       # Runs a single command using the runners shell
