--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -66,6 +66,8 @@ jobs:
       - name: merge into develop
         if: ${{ contains(github.event.head_commit.message, 'Merge pull request') }}
         run: |
+          git config --global user.email "miguel.andres-martinez@awi.de";
+          git config --global user.name "Luna, the cat-bot"
           git checkout develop;
           git pull;
           git merge origin/main --allow-unrelated-histories
