--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -68,6 +68,8 @@ jobs:
         run: |
           git config --global user.email "miguel.andres-martinez@awi.de";
           git config --global user.name "Luna, the cat-bot"
+          git checkout main;
+          git pull;
           git checkout develop;
           git pull;
           git merge origin/main --allow-unrelated-histories
