--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -63,23 +63,16 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
           
-      - name: git checkout
-        uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.event.pull_request.head.ref }}
-          fetch-depth: 0
-
       - name: perform merge
         run: |
           git config --global user.email "${GITHUB_ACTOR}";
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com";
           git status;
           git pull;
-          git checkout "main";
-          git status;
-          git checkout "develop";
-          git merge "main"
+          git checkout main;
+          git pull;
+          git checkout develop;
+          git merge origin/main
       
       - name: push merge into develop
         uses: ad-m/github-push-action@master
