--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -77,7 +77,7 @@ jobs:
           git merge origin/main
       
       - name: push merge into develop
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@develop
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
