--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -66,6 +66,7 @@ jobs:
           tags: true
           
       - name: perform merge
+        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') }}
         run: |
           git config --global user.email "${GITHUB_ACTOR}";
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com";
