--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -15,6 +15,12 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  inputs:
+    environment:
+      description: 'Define env name'     
+      required: true
+      default: 'prod'
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
