--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -72,16 +72,16 @@ jobs:
 
       - name: push changes
         run: |
-          git config --global user.email "esmtools-bot";
-          git config --global user.name "esmtools-bot@users.noreply.github.com";
+          git config --global user.email "esmtools.bot@gmail.com";
+          git config --global user.name "esmtools-bot";
           git push;
           git push --tags:
           
       - name: perform merge
         if: ${{ contains(github.event.head_commit.message, 'Merge pull request') }}
         run: |
-          git config --global user.email "${GITHUB_ACTOR}";
-          git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com";
+          git config --global user.email "esmtools.bot@gmail.com";
+          git config --global user.name "esmtools-bot";
           git status;
           git pull;
           git checkout release;
