--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -53,6 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
+          GITHUB_ACTOR: "esmtools-bot <esmtools.bot@gmail.com>"
 
       - name: bump feature
         if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && (
@@ -77,8 +78,9 @@ jobs:
 
       - name: change author
         run: |
-          git commit --amend --author "esmtools-bot <esmtools.bot@gmail.com>";
+          #git commit --amend --author "esmtools-bot <esmtools.bot@gmail.com>";
           git log; git bame
+          echo $GITHUB_ACTOR
         
       - name: push changes
         run: |
