--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -17,74 +17,92 @@ name: merge automation
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push release branch
-  push:
-    branches: [ release ]
+  issue_comment:
+    types: [created]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
   # This workflow contains a single job called "build"
-  build:
+  bump_and_merge2dev:
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '#bump') }}
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+        with:
+          ref: release
+          
+      - name: cherry pick last bump from release
+        run: git status
+        
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           
-      - name: bump patch
-        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
-          contains(github.event.head_commit.message, 'fix/') &&
-          !contains(github.event.head_commit.message, 'feat/') &&
-          !contains(github.event.head_commit.message, 'feature/')
-          }}
-        uses: jaumann/github-bumpversion-action@v0.0.7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
-
-      - name: bump feature
-        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && (
-          contains(github.event.head_commit.message, 'feat/') ||
-          contains(github.event.head_commit.message, 'feature/') ) &&
-          !contains(github.event.head_commit.message, 'fix/')
-          }}
-        uses: jaumann/github-bumpversion-action@v0.0.7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: minor
+      - name: just print info
+        run: git status
           
-      - name: bump default
-        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') &&
-          !contains(github.event.head_commit.message, 'feat/') &&
-          !contains(github.event.head_commit.message, 'feature/') &&
-          !contains(github.event.head_commit.message, 'fix/')
-          }}
-        uses: jaumann/github-bumpversion-action@v0.0.7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+#      - name: bump patch
+#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
+#          contains(github.event.head_commit.message, 'fix/') &&
+#          !contains(github.event.head_commit.message, 'feat/') &&
+#          !contains(github.event.head_commit.message, 'feature/')
+#          }}
+#        uses: mandresm/github-bumpversion-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          DEFAULT_BUMP: patch
 
-      - name: push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tags: true
+#      - name: bump feature
+#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && (
+#          contains(github.event.head_commit.message, 'feat/') ||
+#          contains(github.event.head_commit.message, 'feature/') ) &&
+#          !contains(github.event.head_commit.message, 'fix/')
+#          }}
+#        uses: mandresm/github-bumpversion-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          DEFAULT_BUMP: minor
           
-      - name: perform merge
-        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') }}
-        run: |
-          git config --global user.email "${GITHUB_ACTOR}";
-          git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com";
-          git status;
-          git pull;
-          git checkout release;
-          git pull;
-          git checkout develop;
-          git merge origin/release;
-          git push
+#      - name: bump default
+#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') &&
+#          !contains(github.event.head_commit.message, 'feat/') &&
+#          !contains(github.event.head_commit.message, 'feature/') &&
+#          !contains(github.event.head_commit.message, 'fix/')
+#          }}
+#        uses: mandresm/github-bumpversion-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+
+#      - name: change author
+#        run: |
+#          git log -n 3;
+#          echo $GITHUB_ACTOR
+        
+#      - name: push changes
+#        run: |
+#          git config --global user.email "esmtools.bot@gmail.com";
+#          git config --global user.name "esmtools-bot";
+#          git push;
+#          git push --tags
+          
+#      - name: perform merge
+#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') }}
+#        run: |
+#          git status;
+#          git pull;
+#          git checkout release;
+#          git pull;
+#          git checkout develop;
+#          git merge origin/release;
+#          git push
