--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -50,7 +50,7 @@ jobs:
           fetch-depth: 0
           
       - name: just print info
-        run: git status
+        run: git status; echo "$DEFAULT_BRANCH"
           
 #      - name: bump patch
 #        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
