--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -53,7 +53,7 @@ jobs:
         run: git status; echo "${SOMETHING}"
         env:
           DEFAULT_BRANCH: ${{ github.event.issue.pull_request.head_ref }}
-          SOMETHING: ${{ github.event.issue.head_ref }}
+          SOMETHING: ${{ github.event.pull_request.head.sha }}
           
 #      - name: bump patch
 #        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
