--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -50,10 +50,9 @@ jobs:
           fetch-depth: 0
           
       - name: just print info
-        run: git status; echo "${SOMETHING}"
+        run: git status; PR_URL="${{ github.event.issue.pull_request.url }}"; PR_NUM=${PR_URL##*/}; echo "$PR_URL and $PR_NUM}"
         env:
           DEFAULT_BRANCH: ${{ github.event.issue.pull_request.head_ref }}
-          SOMETHING: ${{ github.event.comment.body }}
           
 #      - name: bump patch
 #        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
