--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -50,7 +50,7 @@ jobs:
           fetch-depth: 0
           
       - name: just print info
-        run: git status; PR_URL="${{ github.event.issue.pull_request.url }}"; PR_NUM=${PR_URL##*/}; echo "$PR_URL and $PR_NUM}"
+        run: PR_URL="${{ github.event.issue.pull_request.url }}"; PR_NUM=${PR_URL##*/}; echo "$PR_URL and $PR_NUM}"; hub pr checkout $PR_NUM; git status
         env:
           DEFAULT_BRANCH: ${{ github.event.issue.pull_request.head_ref }}
           
