--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -42,7 +42,9 @@ jobs:
           fetch-depth: 0
           
       - name: cherry pick last bump from release
-        run: git status
+        run: |
+          ID_LAST_BUMP=$(git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h");
+          echo $ID_LAST_BUMP
         
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
