--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -43,6 +43,7 @@ jobs:
           
       - name: cherry pick last bump from release
         run: |
+          git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h";
           ID_LAST_BUMP=$(git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h");
           echo $ID_LAST_BUMP
         
