--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -41,13 +41,13 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: cherry pick last bump from release
-        run: |
-          git log -n 3 --grep="Bump version\:"
-          git status;
-          git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h";
-          ID_LAST_BUMP=$(git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h");
-          echo $ID_LAST_BUMP
+      #- name: cherry pick last bump from release
+      #  run: |
+      #    git log -n 3 --grep="Bump version\:"
+      #    git status;
+      #    git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h";
+      #    ID_LAST_BUMP=$(git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h");
+      #    echo $ID_LAST_BUMP
         
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -64,52 +64,52 @@ jobs:
           DEFAULT_BRANCH: ${{ github.event.issue.pull_request.head_ref }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: print
-        run: git status
+      - name: merge release into this branch
+        run: |
+          git status
+          git merge release;
           
-#      - name: bump patch
-#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
-#          contains(github.event.head_commit.message, 'fix/') &&
-#          !contains(github.event.head_commit.message, 'feat/') &&
-#          !contains(github.event.head_commit.message, 'feature/')
-#          }}
-#        uses: mandresm/github-bumpversion-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          DEFAULT_BUMP: patch
+      - name: bump patch
+        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && 
+          contains(github.event.head_commit.message, 'fix/') &&
+          !contains(github.event.head_commit.message, 'feat/') &&
+          !contains(github.event.head_commit.message, 'feature/')
+          }}
+        uses: mandresm/github-bumpversion-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
 
-#      - name: bump feature
-#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && (
-#          contains(github.event.head_commit.message, 'feat/') ||
-#          contains(github.event.head_commit.message, 'feature/') ) &&
-#          !contains(github.event.head_commit.message, 'fix/')
-#          }}
-#        uses: mandresm/github-bumpversion-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          DEFAULT_BUMP: minor
+      - name: bump feature
+        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') && (
+          contains(github.event.head_commit.message, 'feat/') ||
+          contains(github.event.head_commit.message, 'feature/') ) &&
+          !contains(github.event.head_commit.message, 'fix/')
+          }}
+        uses: mandresm/github-bumpversion-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: minor
           
-#      - name: bump default
-#        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') &&
-#          !contains(github.event.head_commit.message, 'feat/') &&
-#          !contains(github.event.head_commit.message, 'feature/') &&
-#          !contains(github.event.head_commit.message, 'fix/')
-#          }}
-#        uses: mandresm/github-bumpversion-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+      - name: bump default
+        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') &&
+          !contains(github.event.head_commit.message, 'feat/') &&
+          !contains(github.event.head_commit.message, 'feature/') &&
+          !contains(github.event.head_commit.message, 'fix/')
+          }}
+        uses: mandresm/github-bumpversion-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
 
 #      - name: change author
 #        run: |
 #          git log -n 3;
 #          echo $GITHUB_ACTOR
         
-#      - name: push changes
-#        run: |
-#          git config --global user.email "esmtools.bot@gmail.com";
-#          git config --global user.name "esmtools-bot";
-#          git push;
-#          git push --tags
+      - name: push changes
+        run: |
+          git push;
+          git push --tags
           
 #      - name: perform merge
 #        if: ${{ contains(github.event.head_commit.message, 'Merge pull request') }}
