--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -56,8 +56,8 @@ jobs:
           
       - name: set user
         run: |
-          git config --global user.email "esmtools.bot@gmail.com";
-          git config --global user.name "esmtools-bot"
+          git config --global user.name "${GITHUB_ACTOR}";
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           
       - name: checkout PR origin branch
         run: |
